--- a/.github/workflows/download-and-release.yml
+++ b/.github/workflows/download-and-release.yml
@@ -3,6 +3,9 @@ name: Download and Release APK
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   download_and_release:
     runs-on: ubuntu-latest
